Fix CTest for CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ enable_testing()
 ADD_EXECUTABLE(basic_test tests/basic_test.cpp ${CHUNKY_SRC})
 TARGET_INCLUDE_DIRECTORIES(basic_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(basic_test ${CHUNKY_LIBS})
-ADD_TEST(basic_test basic_test)
+ADD_TEST(NAME basic_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/basic_test)
 
 ADD_EXECUTABLE(chunkgen chunkgen.cpp ${CHUNKY_SRC})
 TARGET_INCLUDE_DIRECTORIES(chunkgen PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(chunkgen ${CHUNKY_LIBS})
-ADD_TEST(chunkgen chunkgen_test1)
+ADD_TEST(NAME chunkgen_test1 COMMAND ${CMAKE_CURRENT_BINARY_DIR}/chunkgen)
