Initial implementation of our 'runner' fake rogue-like
Used to inspect chunky maps. Requires ncurses.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,7 @@ ADD_EXECUTABLE(chunkgen chunkgen.cpp ${CHUNKY_SRC})
 TARGET_INCLUDE_DIRECTORIES(chunkgen PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(chunkgen ${CHUNKY_LIBS})
 ADD_TEST(NAME chunkgen_test1 COMMAND ${CMAKE_CURRENT_BINARY_DIR}/chunkgen)
+
+ADD_EXECUTABLE(runner runner/runner.cpp ${CHUNKY_SRC})
+TARGET_INCLUDE_DIRECTORIES(runner PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+TARGET_LINK_LIBRARIES(runner ncurses ${CHUNKY_LIBS})
