New class: chunkview
The chunkview is a composed of multiple chunks that you can use
as a moving window into a larger world of chunks. There is now
also the viewrunner demo for this, similar to runner but that
uses a chunkview window instead. The implementation of this was
mostly coded by Gemini.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,15 @@ TARGET_INCLUDE_DIRECTORIES(chunkgen PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(chunkgen ${CHUNKY_LIBS})
 ADD_TEST(NAME chunkgen_test1 COMMAND ${CMAKE_CURRENT_BINARY_DIR}/chunkgen)
 
+ADD_EXECUTABLE(view_test tests/view_test.cpp ${CHUNKY_SRC} chunkview.cpp chunkview.h)
+TARGET_INCLUDE_DIRECTORIES(view_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+TARGET_LINK_LIBRARIES(view_test ${CHUNKY_LIBS})
+ADD_TEST(NAME view_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/view_test)
+
 ADD_EXECUTABLE(runner runner/runner.cpp ${CHUNKY_SRC})
 TARGET_INCLUDE_DIRECTORIES(runner PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(runner ncurses ${CHUNKY_LIBS})
+
+ADD_EXECUTABLE(viewrunner runner/viewrunner.cpp ${CHUNKY_SRC} chunkview.cpp)
+TARGET_INCLUDE_DIRECTORIES(viewrunner PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+TARGET_LINK_LIBRARIES(viewrunner ncurses ${CHUNKY_LIBS})
